// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthContainer renders with empty extra links and error 1`] = `
<Styled(Container)>
  <ImageBackground
    source={
      Object {
        "testUri": "../../../src/assets/rays.jpg",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Styled(Content)
      contentContainerStyle={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 500,
        }
      }
    >
      <Styled(ViewNB)
        padder={true}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, .85)",
            "borderRadius": 20,
            "maxWidth": 450,
            "width": "90%",
          }
        }
      >
        <AuthHeader />
        <Styled(H2)
          style={
            Object {
              "margin": 5,
            }
          }
        >
          Sign In
        </Styled(H2)>
        <Styled(Text)
          style={
            Object {
              "color": "red",
              "padding": 20,
            }
          }
        >
          Test error message
        </Styled(Text)>
        <Styled(ViewNB)
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </Styled(ViewNB)>
    </Styled(Content)>
  </ImageBackground>
</Styled(Container)>
`;

exports[`AuthContainer renders with extra links and no error 1`] = `
<Styled(Container)>
  <ImageBackground
    source={
      Object {
        "testUri": "../../../src/assets/rays.jpg",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Styled(Content)
      contentContainerStyle={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 500,
        }
      }
    >
      <Styled(ViewNB)
        padder={true}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, .85)",
            "borderRadius": 20,
            "maxWidth": 450,
            "width": "90%",
          }
        }
      >
        <AuthHeader />
        <Styled(H2)
          style={
            Object {
              "margin": 5,
            }
          }
        >
          Sign In
        </Styled(H2)>
        <Styled(ViewNB)
          style={
            Object {
              "width": "100%",
            }
          }
        />
        <Styled(ViewNB)
          padder={true}
        >
          <AuthExtraLink
            buttonText="text"
            handlePress={[Function]}
            key="0"
            message="test"
          />
          <AuthExtraLink
            buttonText="text"
            handlePress={[Function]}
            key="1"
            message="test"
          />
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(Content)>
  </ImageBackground>
</Styled(Container)>
`;

exports[`AuthContainer renders without extra links and no error 1`] = `
<Styled(Container)>
  <ImageBackground
    source={
      Object {
        "testUri": "../../../src/assets/rays.jpg",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Styled(Content)
      contentContainerStyle={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 500,
        }
      }
    >
      <Styled(ViewNB)
        padder={true}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, .85)",
            "borderRadius": 20,
            "maxWidth": 450,
            "width": "90%",
          }
        }
      >
        <AuthHeader />
        <Styled(H2)
          style={
            Object {
              "margin": 5,
            }
          }
        >
          Sign In
        </Styled(H2)>
        <Styled(ViewNB)
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </Styled(ViewNB)>
    </Styled(Content)>
  </ImageBackground>
</Styled(Container)>
`;
